# rl-emails

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_PLAN.md  Makefile  PIPELINE.md  README.md  TRAINING_LOG.md  alembic.ini  haiku_100_features.json  haiku_features.json  inference.py  phi4_features.json  pyproject.toml  ralph-wiggum-phase2.md  ralph-wiggum.md  requirements.txt  run_pipeline.py  test_tasks.json
.beads/: issues.jsonl
.claude/: settings.json
.claude/hooks/: post-edit.sh  pre-stop.sh
alembic/: env.py
alembic/versions/: 20260107144608_add_multi_tenant_tables.py  20260109_cluster_meta.py  (+2 more)
apps/: labeling_ui.py  labeling_ui_v2.py
checkpoints/: dpo_gmail.pt  sft_gmail.pt
db/: populate_threads.py  schema.surql
docs/: 00-feature-extraction-plan.md  ARCHITECTURE_PLAN.md  FUTURE_PHASES.md  GMAIL_API_SETUP.md  PHASE1_ITERATIONS.md  PHASE2_ITERATIONS.md  PHASE3_ITERATIONS.md  SCHEMA.md
eval_results/: baseline.json  dpo.json  gmail_baseline.json  gmail_dpo.json  gmail_sft.json  sft_balanced.json  sft_content.json  sft_focal.json  sft_weighted.json  stage_1.json
results/: gate3_result.json
scripts/: analyze_data_quality.py  analyze_emails.py  checkpoint.py  classify_ai_handleability.py  cluster_emails.py  cluster_embeddings.py  compute_basic_features.py  compute_embeddings.py  compute_features.py  compute_priority.py  create_schema.sql  create_splits_gmail.py  dedupe_projects.py  detect_participant_bursts.py  detect_priority_contexts.py  discover_participant_projects.py  download_mailing_list.py  enrich_emails_db.py  extract_attachments.py  extract_implicit_preferences.py  extract_llm_features.py  filter_mbox_by_date.py  generate_embeddings.py  import_to_postgres.py  infer.py  labeling_ui.py  labeling_ui_v2.py  mine_gmail_labels.py  onboard_data.py  parse_mbox.py  populate_threads.py  populate_threads.sql  populate_users.py  query_db.py  restore_embeddings.py  run_llm_classification.py  setup_user.py  test_haiku_parallel.py  test_lm_studio_tasks.py  test_phase1_llm.py  (+5 more)
src/: __init__.py  dataset.py  dpo_training.py  email_state.py  evaluate.py  metrics.py  multi_task_extraction.py  parse_emails.py  parse_gmail_mbox.py  policy_network.py  reward.py  reward_model.py  sft_trainer.py  sft_training.py  task_extraction.py  train_dpo.py  train_sft.py  trainer.py
tests/: test_complexity.py  test_features.py  test_grpo_training.py  test_lifecycle.py  test_multi_task_extraction.py  test_policy_network.py  test_reward.py  test_reward_model.py  test_service.py  test_sft.py  test_template.py  test_timeline.py  test_trainer.py
(+149 files in other folders)
